--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-29T13:52:13Z</date>
+						<date>2018-09-07T13:26:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -502,11 +502,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mWYL7yLDWaxm
-								SPxGAHc1kg==
+								Dgsn2qg0VLf5
+								6IBUFuzHvw==
 								</data>
 								<key>Size</key>
-								<integer>201794</integer>
+								<integer>201582</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -532,11 +532,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PBDuFIGGKi56
-								3Po86mwe0Q==
+								4BanFwvcG+HE
+								DTbIWiehCg==
 								</data>
 								<key>Size</key>
-								<integer>158865</integer>
+								<integer>158461</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
