changes to schedule
change to schedule

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-07T13:26:57Z</date>
+						<date>2018-09-10T15:27:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -532,11 +532,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4BanFwvcG+HE
-								DTbIWiehCg==
+								3FToEa5P85Dm
+								P+qNG8WHvg==
 								</data>
 								<key>Size</key>
-								<integer>158461</integer>
+								<integer>158221</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
