style changes sos
Dinner On Your Own

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3256,7 +3256,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-11T14:04:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3645,11 +3645,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								15utzDjcJ0LR
-								B4krfWgoxQ==
+								jvbUZ/oXB5y/
+								eZg4bYpdCA==
 								</data>
 								<key>Size</key>
-								<integer>126454</integer>
+								<integer>126372</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5452,7 +5452,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-11T14:04:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5921,11 +5921,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Dgsn2qg0VLf5
-								6IBUFuzHvw==
+								NuX0bDZ+jat+
+								6j7IoAAUzg==
 								</data>
 								<key>Size</key>
-								<integer>201582</integer>
+								<integer>201288</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -5951,11 +5951,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mEROlQ85HVqR
-								e91gxs0joA==
+								Lmi4E8JVzeaR
+								KxZuCptDnA==
 								</data>
 								<key>Size</key>
-								<integer>157918</integer>
+								<integer>157232</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9074,7 +9074,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-11T14:04:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10113,11 +10113,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FpbmxE6QfsOZ
-								/Hu15tHsVA==
+								CczgcQS6z/xA
+								kUK5wOQMvw==
 								</data>
 								<key>Size</key>
-								<integer>3919</integer>
+								<integer>3290</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10221,7 +10221,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAo4XOKnKfgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HApAGILqjrgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10232,7 +10232,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCjhc4qdvuA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCkAYgureaA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
