--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-11T14:04:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -502,11 +502,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Dgsn2qg0VLf5
-								6IBUFuzHvw==
+								NuX0bDZ+jat+
+								6j7IoAAUzg==
 								</data>
 								<key>Size</key>
-								<integer>201582</integer>
+								<integer>201288</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -532,11 +532,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mEROlQ85HVqR
-								e91gxs0joA==
+								Lmi4E8JVzeaR
+								KxZuCptDnA==
 								</data>
 								<key>Size</key>
-								<integer>157918</integer>
+								<integer>157232</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
