--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-11T14:04:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -422,11 +422,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								15utzDjcJ0LR
-								B4krfWgoxQ==
+								jvbUZ/oXB5y/
+								eZg4bYpdCA==
 								</data>
 								<key>Size</key>
-								<integer>126454</integer>
+								<integer>126372</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
