--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-13T16:17:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -462,11 +462,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/WlG9BxMh1w1
-								GS/UxxpNJA==
+								KaKCC5j00nJL
+								svsR5/3APQ==
 								</data>
 								<key>Size</key>
-								<integer>133318</integer>
+								<integer>133317</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
